# mobile_agent

./: AGENTS.md  Makefile  README.md  docker-compose.yml  langgraph.json  pyproject.toml
agent/: encryption.py  prompt.py  server.py  webapp.py
docs/: capability-gateway.md  model-gateway.md
engine/agent-engine-core/: pyproject.toml
engine/agent-engine-core/on_core/: engine.py  prompt.py
engine/agent-engine-core/on_core/middleware/: __init__.py  check_message_queue.py  ensure_no_empty_msg.py  model_fallback.py  sanitize_thinking_blocks.py  tool_artifact.py  tool_error_handler.py
integrations/azure-devops/: pyproject.toml
integrations/azure-devops/integration_azure_devops/: __init__.py
integrations/entra/: pyproject.toml
integrations/entra/identity_entra/: __init__.py  tokens.py
scripts/: __init__.py  create_sandbox_snapshot.py  dev-all.sh
services/model-gateway/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/model-gateway/model_gateway/: __init__.py  app.py  catalog.py  config.py
services/model-gateway/tests/: test_gateway.py
tests/: conftest.py  test_actor_scope_and_seam.py  test_agent_auth_providers.py  test_agent_instructions.py  test_agent_schedules.py  test_agent_subagent_models.py  test_approval_gate.py  test_auth_tokens.py  test_authorship.py  test_azure_devops_dashboard_api.py  test_azure_devops_mcp.py  test_capability_gateway.py  test_check_message_queue.py  test_composition_profile_wiring.py  test_consultative_sandbox.py  test_context_providers.py  test_context_resolution.py  test_dashboard_repo_optional.py  test_dashboard_thread_api.py  test_dashboard_web_handoff.py  test_daytona_integration.py  test_devcontainer_worktree_integration.py  test_developer_profile.py  test_encryption.py  test_engine_neutrality.py  test_ensure_no_empty_msg.py  test_entra_oauth.py  test_entra_routes.py  test_fireworks_model.py  test_gateway_metadata.py  test_gateway_model_resolution.py  test_google_model.py  test_identity_models.py  test_langsmith_sandbox_config.py  test_langsmith_sandbox_timeout.py  test_local_worktree_integration.py  test_model_fallback_middleware.py  test_model_fallback_resolution.py  test_model_launcher.py  test_model_resolver.py  (+13 more)
ui/src/: styles.css
(+116 files in other folders)
