[project]
name = "on-core"
version = "0.1.0"
description = "ON Mobile Agent engine core: brand-free deep-agent assembly, prompt, middleware"
requires-python = ">=3.11"
dependencies = [
    "deepagents==0.6.8",
    "langchain>=1.3.4",
    "langgraph>=1.1.10",
    "langgraph-sdk>=0.4.2",
    "langchain-anthropic>=1.4.4",
    "langsmith==0.8.11",
    "anthropic",
    "openai",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["on_core"]
