[project]
name = "on-integration-azure-devops"
version = "0.1.0"
description = "Azure DevOps MCP preset: server config + read-only tool policy"
requires-python = ">=3.11"
dependencies = [
    "on-capability-gateway",
]

[tool.uv.sources]
on-capability-gateway = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["integration_azure_devops"]
