[project]
name = "on-identity-entra"
version = "0.1.0"
description = "Microsoft Entra identity provider: PKCE OAuth, id_token validation, encrypted token store"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "PyJWT>=2.12.1",
    "cryptography>=48.0.0",
    "fastapi>=0.136.3",
    "langgraph-sdk>=0.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["identity_entra"]
