[project]
name = "on-model-gateway"
version = "0.1.0"
description = "ON Model Gateway: OpenAI-compatible facade that owns model capabilities and proxies to providers."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["model_gateway"]

[tool.ruff]
line-length = 100
